cluster/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefect-server
  namespace: prefect
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect : "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect : "true"
spec:
  ingressClassName: nginx
  rules:
  - host: local-prefect.privatelink.uksouth.azmk8s.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prefect-server
            port: 
              number: 443
  tls:
  - hosts:
    - local-prefect.privatelink.uksouth.azmk8s.io
    secretName: local-prefect.privatelink.uksouth.azmk8s.io-tls
